<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
 <!--App's Home Page Banner Text -->
 <TextView
     android:id="@+id/bannerTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="30dp"
     android:text="@string/badminton_score_keeper"
     android:textAppearance="@style/TextAppearance.AppCompat.Display1"
     app:layout_constraintBottom_toTopOf="@+id/vsTextView"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.0" />
 <!-- Team India's TextView -->
 <TextView
     android:id="@+id/indiaTeamTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginEnd="48dp"
     android:text="@string/india"
     android:textAppearance="@style/TextAppearance.AppCompat.Display1"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toStartOf="@+id/vsTextView"
     app:layout_constraintHorizontal_bias="0.65"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.161" />

 <!-- Team UK's TextView -->
 <TextView
     android:id="@+id/ukTeamTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginEnd="60dp"
     android:text="@string/uk"
     android:textAppearance="@style/TextAppearance.AppCompat.Display1"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.16" />

 <!-- "Vs" TextView -->

 <!-- TextView to capture the score for Team "India"-->

 <TextView
     android:id="@+id/vsTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/vs"
     android:textAppearance="@style/TextAppearance.AppCompat.Display1"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.526"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.16" />

 <TextView
     android:id="@+id/indiaScoreTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="52dp"
     android:layout_marginTop="186dp"
     android:layout_marginBottom="500dp"
     android:text="@string/zeroValueInd"
     android:textAppearance="@style/TextAppearance.AppCompat.Display1"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.0" />

 <!-- TextView to capture the score for Team "UK"-->
 <TextView
     android:id="@+id/ukScoreTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="305dp"
     android:layout_marginTop="193dp"
     android:layout_marginEnd="68dp"
     android:layout_marginBottom="493dp"
     android:text="@string/zeroValueUk"
     android:textAppearance="@style/TextAppearance.AppCompat.Display1"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />

 <!-- Image Button to make score up for Team "India"-->
 <ImageButton
     android:id="@+id/incScoreIndImageButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="98dp"
     android:layout_marginTop="185dp"
     android:layout_marginEnd="274dp"
     android:layout_marginBottom="516dp"
     android:contentDescription="@string/increases_scoreInd"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:srcCompat="@android:drawable/arrow_up_float" />

 <!-- Image Button to make score down for Team "India"-->
 <ImageButton
     android:id="@+id/decScoreIndImageButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="98dp"
     android:layout_marginTop="208dp"
     android:layout_marginEnd="274dp"
     android:layout_marginBottom="493dp"
     android:contentDescription="@string/decreases_scoreInd"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:srcCompat="@android:drawable/arrow_down_float" />

 <!-- Image Button to make score up for Team "UK"-->
 <ImageButton
     android:id="@+id/incScoreUkImageButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="351dp"
     android:layout_marginTop="186dp"
     android:layout_marginEnd="21dp"
     android:layout_marginBottom="515dp"
     android:contentDescription="@string/increases_scoreUk"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:srcCompat="@android:drawable/arrow_up_float" />

 <!-- Image Button to make score up for Team "UK"-->
 <ImageButton
     android:id="@+id/decScoreUkImageButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="351dp"
     android:layout_marginTop="208dp"
     android:layout_marginEnd="21dp"
     android:layout_marginBottom="493dp"
     android:contentDescription="@string/decreases_scoreUk"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:srcCompat="@android:drawable/arrow_down_float" />

 <!-- Textview for showcasing a message to allow user to pick from 4 radio buttons-->
 <!-- Radio group to provide user an option to
      increment or decrement the value by a certain value-->

 <TextView
     android:id="@+id/optionButtonMsgTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="30dp"
     android:layout_marginTop="265dp"
     android:layout_marginEnd="51dp"
     android:layout_marginBottom="447dp"
     android:allowUndo="true"
     android:text="@string/select_an_amount_below_to_change_the_score_by"
     android:textAppearance="@style/TextAppearance.AppCompat.Small"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="1.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="1.0" />

 <RadioGroup
     android:id="@+id/radioGroup"
     android:layout_width="75dp"
     android:layout_height="196dp"
     android:layout_marginStart="180dp"
     android:layout_marginTop="30dp"
     android:layout_marginBottom="180dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/optionButtonMsgTextView"
     app:layout_constraintVertical_bias="0.0">
  <!-- Radio Button of value "0" for Team -->
  <RadioButton
      android:id="@+id/zeroPointRadioButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/zeroValueRadio" />

  <!-- Radio Button of value "5" for Team -->
  <RadioButton
      android:id="@+id/fivePointRadioButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/fiveValueRadio" />

  <!-- Radio Button of value "10" for Team -->
  <RadioButton
      android:id="@+id/tenPointRadioButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/tenValueRadio" />

  <!-- Radio Button of value "15" for Team -->
  <RadioButton
      android:id="@+id/fifteenPointRadioButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/fifteenValueRadio" />
 </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>